--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <li>
                         <a href="#">Processadores</a>
                         <ul class="submenu">
-                            <li><a href=".pages/submenu/pentium.html">Intel Pentium</a></li>
+                            <li><a href="/pages/submenu/pentium.html">Intel Pentium</a></li>
                             <li><a href="/pages/submenu/celeron.html">Intel Celeron</a></li>
                             <li><a href="/pages/submenu/i3.html">Intel Core i3</a></li>
                             <li><a href="/pages/submenu/i5.html">Intel Core i5</a></li>
@@ -82,5 +82,6 @@
     </footer>
 
 </body>
+
 
 </html>
