--- a/index.html
+++ b/index.html
@@ -27,18 +27,18 @@
                     <li>
                         <a href="#">Processadores</a>
                         <ul class="submenu">
-                            <li><a href="/pages/submenu/pentium.html">Intel Pentium</a></li>
-                            <li><a href="/pages/submenu/celeron.html">Intel Celeron</a></li>
-                            <li><a href="/pages/submenu/i3.html">Intel Core i3</a></li>
-                            <li><a href="/pages/submenu/i5.html">Intel Core i5</a></li>
-                            <li><a href="/pages/submenu/i7.html">Intel Core i7</a></li>
-                            <li><a href="/pages/submenu/i9.html">Intel Core i9</a></li>
+                            <li><a href="pages/submenu/pentium.html">Intel Pentium</a></li>
+                            <li><a href="pages/submenu/celeron.html">Intel Celeron</a></li>
+                            <li><a href="pages/submenu/i3.html">Intel Core i3</a></li>
+                            <li><a href="pages/submenu/i5.html">Intel Core i5</a></li>
+                            <li><a href="pages/submenu/i7.html">Intel Core i7</a></li>
+                            <li><a href="pages/submenu/i9.html">Intel Core i9</a></li>
                         </ul>
                     </li>
 
-                    <li><a href="/pages/produtos.html">Produtos</a></li>
-                    <li><a href="/pages/drives.html">Drives</a></li>
-                    <li><a href="/pages/curiosidades.html">Curiosidades</a></li>
+                    <li><a href="pages/produtos.html">Produtos</a></li>
+                    <li><a href="pages/drives.html">Drives</a></li>
+                    <li><a href="pages/curiosidades.html">Curiosidades</a></li>
                     <li><a href="https://www.intel.com" target="_blank">Site oficial</a></li>
                 </ul>
             </nav>
@@ -85,3 +85,4 @@
 
 
 </html>
+
