--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Produtos - Intel</title>
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../plugins/bxslider.css">
-    <link rel="stylesheet" href="../../plugins/magnific-popup.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../plugins/bxslider.css">
+    <link rel="stylesheet" href="../plugins/magnific-popup.css">
     <script src="../plugins/jquery.min.js"></script>
     <script src="../plugins/bxslider.min.js"></script>
     <script src="../plugins/jquery.magnific-popup.min.js"></script>
@@ -22,7 +22,7 @@
 
             <nav id="menu">
                 <ul>
-                    <li><a href="../../index.html">Início</a></li>
+                    <li><a href="../index.html">Início</a></li>
 
                     
                     <li>
@@ -92,3 +92,4 @@
 
 </body>
 </html>
+
