--- a/pages/produtos.html
+++ b/pages/produtos.html
@@ -28,12 +28,12 @@
                     <li>
                         <a href="#">Processadores</a>
                         <ul class="submenu">
-                            <li><a href="/pages/submenu/pentium.html">Intel Pentium</a></li>
-                            <li><a href="/pages/submenu/celeron.html">Intel Celeron</a></li>
-                            <li><a href="/pages/submenu/i3.html">Intel Core i3</a></li>
-                            <li><a href="/pages/submenu/i5.html">Intel Core i5</a></li>
-                            <li><a href="/pages/submenu/i7.html">Intel Core i7</a></li>
-                            <li><a href="/pages/submenu/i9.html">Intel Core i9</a></li>
+                            <li><a href="../pages/submenu/pentium.html">Intel Pentium</a></li>
+                            <li><a href="../pages/submenu/celeron.html">Intel Celeron</a></li>
+                            <li><a href="../pages/submenu/i3.html">Intel Core i3</a></li>
+                            <li><a href="../pages/submenu/i5.html">Intel Core i5</a></li>
+                            <li><a href="../pages/submenu/i7.html">Intel Core i7</a></li>
+                            <li><a href="../pages/submenu/i9.html">Intel Core i9</a></li>
                         </ul>
                     </li>
 
@@ -92,4 +92,5 @@
 
 </body>
 </html>
+
 
