--- a/pages/submenu/i7.html
+++ b/pages/submenu/i7.html
@@ -20,7 +20,7 @@
 
         <nav id="menu">
             <ul>
-                <li><a href="index.html">Início</a></li>
+                <li><a href="../../index.html">Início</a></li>
 
                 <li>
                     <a href="#">Processadores</a>
@@ -87,3 +87,4 @@
 
 </body>
 </html>
+
