--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <section id="historia" class="conteudo">
         <div class="container">
-            <h2 class="titulo">Intel corporantion</h2>
+            <h2 class="titulo">Intel corporation</h2>
 
             <img src="images/soquete.png" alt="Sede da Intel">
 
@@ -85,4 +85,5 @@
 
 
 </html>
+
 
